--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
   Daily log of 'stuff' going on during Google Summer of Code 2020 with OpenChemistry and cclib
 baseurl:
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: https://mscho527.github.io/gsoc2020 # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username: mscho527
 
